change: Bump to gradle 8.14 & Java 24